# thatcord

./: Cargo.toml  README.md
examples/: guild_list.rs  ready.rs
src/: discord.rs  errors.rs  events.rs  gateway.rs  lib.rs
src/api/: channel.rs  gateway.rs  guild.rs  id.rs  mod.rs  permissions.rs  tests.rs  user.rs
src/gateway/: heartbeat.rs  socket.rs
src/json/: gateway.rs  guild.rs  id.rs  mod.rs  user.rs
