[package]
name = "thatcord"
description = "Discord API crate that supports async/.await with Tokio"
version = "0.1.0"
authors = ["Ecmel Berk Canlier <me@ecmelberk.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
log = "0.4.8"
websocket-lite = "0.3.2"
futures-util = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.5"
url = "2.1.0"
async-trait = "0.1.21"
paste = "0.1.6"

[dev-dependencies]
env_logger = "0.7.1"
